Added primitives to json/definition